<resources>
    <string name="app_name">Proyek 1 Nia Naniati</string>
    <!-- Bagian Identitas Diri -->
    <string name="nama">Nia Naniati</string>
    <string name="nim">232010103</string>
    <string name="fakultas">Pendidikan MIPA dan Teknologi</string>
    <string-array name="prodi">
        <item>Pendidikan Matematika</item>
        <item>Pendidikan Fisika</item>
        <item>Pendidikan Tekonologi Informasi</item>
        <item>Pendidikan Biologi</item>
    </string-array>

    <!-- Bagian Aplikasi -->
    <string name="pertama">Ini adalah desain pertama di Android</string>
    <string name="pesan">Tuliskan pesan anda disini</string>
    <string name="bpertama">Tekan</string>
    <string name="bkedua">Lepas</string>
    <string name="cb1">Pilihan 1</string>
    <string name="cb2">Pilihan 2</string>
    <string name="jk1">Laki-laki</string>
    <string name="jk2">Perempuan</string>

    <!-- Bagian LinearLayot 2-->
    <string name="Kepada">Kepada</string>
    <string name="subyek">Subyek</string>
    <string name="isi">Isi Pesan</string>
    <string name="kirim">Kirim</string>

    <string name="copyright">Created by Nia Naniati \n IKIP PGRI Pontianak</string>
    <string name="username">Masukkan Nama Anda</string>

</resources>