<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">
    <!-- TextView digunakan untuk menuliskan label-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pertama"/>
    <!-- EditText digunakan untuk input Text Pengguna-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ePesan"
        android:hint="@string/pesan"/>

    <!--Button  digunakan untuk tombol-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bPertama"
        android:text="@string/bpertama"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/bKedua"
        android:text="@string/bkedua"/>

    <!--ImageButton digunakan untuk tombol yang berbasis gambar-->
    <ImageButton
        android:id="@+id/biKetiga"
        android:layout_width="154dp"
        android:layout_height="142dp"
        android:contentDescription=""
        android:src="@drawable/a1a" />

    <ImageButton
        android:id="@+id/biKeempat"
        android:layout_width="158dp"
        android:layout_height="158dp"
        android:contentDescription=""
        android:src="@drawable/a2a" />

    <!--CheckBox digunakan untuk mendapatkan pilihan pengguna yang lebih dari 1-->
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb1"
        android:text="@string/cb1"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb2"
        android:text="@string/cb2"/>

    <!--RadioGroup digunakan untuk mengelompokkan RadioButton
    RadioButton digunakan untuk mendapatkan pilihan pengguna -->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg1"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb1"
            android:text="@string/jk1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb2"
            android:text="@string/jk2"/>

    </RadioGroup>
</LinearLayout>